crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_try-5.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Try(
        Try {
            body: Block {
                items: [
                    Expr(
                        GetVar(
                            GetVar {
                                name: "a",
                            },
                        ),
                    ),
                ],
                last: Some(
                    GetVar(
                        GetVar {
                            name: "b",
                        },
                    ),
                ),
            },
            catch: (
                "e",
                Block {
                    items: [],
                    last: Some(
                        GetVar(
                            GetVar {
                                name: "e",
                            },
                        ),
                    ),
                },
            ),
        },
    ),
)
