crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_try-6.snap
---
source: crates/syntax/src/parser/tests.rs
expression: node.unwrap()
---
Try {
    body: Block {
        items: [
            GetVar {
                name: "a",
            },
            GetVar {
                name: "b",
            },
        ],
        last: None,
    },
    catch: (
        "e",
        Block {
            items: [],
            last: Some(
                GetVar {
                    name: "e",
                },
            ),
        },
    ),
}
