crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_try.snap
---
source: crates/syntax/src/parser/tests.rs
expression: "(result, parser.errors)"
---
(
    Ok(
        Try {
            body: Block {
                items: [],
                last: None,
            },
            catch: (
                "e",
                Block {
                    items: [],
                    last: None,
                },
            ),
        },
    ),
    [],
)
