crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_tuple-2.snap
---
source: crates/syntax/src/parser/tests.rs
expression: node.unwrap()
---
Tuple {
    fields: [
        Int {
            value: 0,
        },
        Int {
            value: 1,
        },
    ],
}
