crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_tuple-3.snap
---
source: crates/syntax/src/parser/tests.rs
expression: "(result, parser.errors)"
---
(
    Ok(
        Tuple {
            fields: [
                Int {
                    value: 0,
                },
                Int {
                    value: 1,
                },
            ],
        },
    ),
    [],
)
