crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_tuple.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Tuple {
        fields: [
            Int {
                value: 0,
            },
        ],
    },
)
