crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_var.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    GetVar {
        name: "test",
    },
)
