crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_imports-10.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Module {
        imports: [
            Import {
                path: [
                    "a",
                    "b",
                ],
                alias: Some(
                    "x",
                ),
            },
            Import {
                path: [
                    "a",
                    "c",
                ],
                alias: Some(
                    "y",
                ),
            },
        ],
        symbols: Symbols {
            fns: {},
            classes: {},
            traits: {},
            aliases: {},
        },
        top_level: [],
    },
)
